[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "toolcall"
version = "2.0.1"
python_requires = ">=3.12"
description = "The agentic framework for building without an agentic framework."
authors = [
    {name = "Ryan Young", email = "dev@ryayoung.com"}
]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/ryayoung/toolcall"
repository = "https://github.com/ryayoung/toolcall"
documentation = "https://toolcall.readthedocs.io"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries"
]
dependencies = [
    'pydantic',
]

[tool.hatch.build.targets.sdist]
packages = ["toolcall"]

[tool.hatch.build.targets.wheel]
packages = ["toolcall"]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "module"

[tool.pyright]
reportUnusedImport = "error"
